--- a/frontend/src/components/NavbarFooter.css
+++ b/frontend/src/components/NavbarFooter.css
@@ -1,29 +1,39 @@
-.navbar-container{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    border: 1px solid rgb(119, 119, 119);
-    width: 100%;
+.navbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center; /* use align-items instead of align-content */
+  background: radial-gradient(at top, rgb(240, 217, 255), rgb(255, 255, 255));
+  width: 100%;
+  height: 60px; /* give it height so gradient is visible */
+  padding-top: 16px;
+  position: fixed;
+  z-index: 1000;
+  margin-bottom: 50px;
+  
 }
+
 .navbar-container-in{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1600px;
+    width: 90%;
 }
 .navbar-logo{
     color: rgb(169, 62, 190);
+    cursor: pointer;
 }
 
 .navbar-heading{
 
 }
 .navbar-heading span{
-    color: rgb(255, 0, 106);
+    color: rgb(184, 1, 77);
+    font-size: 20px;
 }
 .navbar-heading p{
     margin: 0;
     padding: 0;
+    font-size: 12px;
 }
 .navbar-heading h2{
     margin: 0;
@@ -32,19 +42,21 @@
 
 /* Search */
 .navbar-search{
-    border: 1px solid rgb(168, 166, 166);
-    width: 1000px;
+    border: 1px solid rgb(209, 209, 209);
+    width: 1150px;
     padding: 10px;
     border-radius: 8px;
     display: flex;
     align-items: center;
+    background-color: white;
 }
 .navbar-search input{
     margin-left: 5px;
     width: 95%;
-    font-size: larger;
+    font-size: 18px;
     border: none;
     outline: none;
+    margin-left: 20px;
 }
 .navbar-profile{
     display: flex;
@@ -52,6 +64,7 @@
     align-items: center;
     width: 70px;
     cursor: pointer;
+    font-size: small;
 }
 .navbar-profile p{
     margin: 5px;
@@ -64,6 +77,26 @@
     align-items: center;
     width: 70px;
     cursor: pointer;
+    font-size: small;
+}
+.navbar-cart-notification{
+  position: relative;
+}
+.navbar-cart-notification-icon{
+  display: inline;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+  width: 20px;
+  height: 20px;
+  background-color: green;
+  color: white;
+  font-size: 10px;
+  position: absolute;
+  right: -10px;
+  top: -10px;
 }
 .navbar-cart p{
     margin: 5px;
@@ -77,6 +110,8 @@
   color: #5a5959;
   padding: 40px 20px;
   font-family: 'Inter', sans-serif;
+  border-top: 1px solid rgb(216, 216, 216);
+  margin-top: 50px;
 }
 
 .footer-container {
@@ -126,11 +161,15 @@
   color: #ff4c3b;
 }
 
-.social-icons a {
+.social-icons{
   font-size: 22px;
   margin-right: 12px;
   color: #525151;
   transition: color 0.3s ease;
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  cursor: pointer;
 }
 
 .social-icons a:hover {
@@ -142,6 +181,6 @@
   text-align: center;
   font-size: 13px;
   color: #575757;
-  border-top: 1px solid #333;
+  border-top: 1px solid #c5c5c5;
   padding-top: 15px;
 }
